--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: blue;
+    list-style: none;
 }
+.wrap{
+    flex-flow: row wrap;
+}
+section{
+    width: 100%;
+    height: 98vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.h1,.h2,.h3,.ol{
+    width: 18%;
+    height: 25vh;
+    padding: 10px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+ }
+.p{ font-size: small; margin-bottom: 2vh;}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.azul{background-color: aqua;}
+.rosa{background-color: blueviolet;}
+.verde{background-color: chartreuse;}
+.laranja{background-color: chocolate;}
+.preto{color: black;}
