--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,8 @@ section{
     justify-content: space-around;
 }
 .h1,.h2,.h3,.ol{
-    width: 18%;
-    height: 25vh;
+    width: 300px;
+    height: 20vh;
     padding: 10px;
     border-radius: 20px;
     display: flex;
